styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Inter", sans-serif;
}

h1 h2 h3 h4 h5 h6 {
  text-wrap: balance;
  line-height: 1.1;
  letter-spacing: -1%;
  font-family: "Inter", sans-serif;
  color: #e5e7eb;
}

body {
  background-color: #121826;
  color: #e5e7eb;
}

p {
  text-wrap: pretty;
  color: #a1a1a9;
  font-family: "Inter", sans-serif;
}

main {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 182px auto;
  font-family: "Inter", sans-serif;
}

.slider {
  width: 500px;
  height: 390px;
  /* overflow: hidden; */
}

.slider__inner {
  display: flex;
  width: 300%;
  height: 100%;
}

.register {
  width: calc(100% / 3);
  height: 100%;
  padding-left: 40px;
  border: #4d5562 1px solid;
  background-color: #212936;
  border-radius: 12px;
}

.reg, .topics {
  font-size: 20px;
}


p {
  font-size: 12px;
}

.register .reg {
  padding: 40px 40px 40px 0px;
}

.register .topics {
  padding: 40px 40px 24px 0px;
}

.register p {
  margin-bottom: 8px;
}

.email {
  margin-top: 24px;
}

.btn {
  display: block;
  margin: 36px auto 40px auto;
  color: #e5e7eb;
  background: linear-gradient(#845eee, #652cd1);
  padding: 12px 28px;
  border: none;
  border-radius: 32px;
  cursor: pointer;
}

.input {
  padding: 15px;
  width: 90%;
  margin-right: 40px;
  border-radius: 8px;
  backface-visibility: hidden;
  background-color: transparent;
  border-color: #a1a1a9;
  color: #a1a1a9;
}

.input::placeholder {
  color: #a1a1a9;
}

.input:focus {
  color: #e5e7eb;
  border: #652CD1 thin solid;
}

.checkbox-button {
  display: flex;
  position: relative;
  cursor: pointer;
}

.checkbox-button input[type="checkbox"] {
  display: none;
}

.checkbox-button label {
  display: block;
  padding: 15px;
  width: 90%;
  background-color: transparent;
  border: #a1a1a9 thin solid;
  color: #E5E7EB;
  border-radius: 8px;
  margin-bottom: 16px;
  font-size: 1em;
  text-align: left;
  cursor: pointer;
  transition: background-color 0.25s ease-in-out;
}

.checkbox-button label:hover,
.checkbox-button input[type="checkbox"]:checked + label {
  background-color: #845EEE;
  border: #652CD1 thin solid;
}

#nameResponse,
#emailResponse {
  font-size: 16px;
}

#topics{
  font-size: 16px;
  padding-top: 16px;
  color: #a1a1a9;
}

.span {
  color: #e5e7eb;
  font-size: 16px;
}

